small fixes & tuning